--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,19 +1,17 @@
-@import './breakpoints.scss';
-@import './variables.scss';
+@import './utils/breakpoints';
+@import './utils/mixins';
+@import './utils/variables';
 
-// Flexbox
-@mixin flexbox($justify-content: flex-start, $align-items: flex-start, $flex-direction: row, $flex-wrap: wrap) {
-  display: flex;
-  flex-direction: $flex-direction;
-  justify-content: $justify-content;
-  align-items: $align-items;
-  flex-wrap: $flex-wrap;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 html,
 body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
   background: $gwhite;
-  margin: 0;
   font-size: 16px;
 }
 
@@ -26,3 +24,5 @@ body {
     height: 100%;
   }
 }
+
+@import './vn/vn';
