--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,7 @@ body {
     'Helvetica Neue', sans-serif;
   background: $gwhite;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 .container-fluid {
