Still working on VN design

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,7 @@
 @import './utils/breakpoints';
 @import './utils/mixins';
 @import './utils/variables';
+@import './utils//icons';
 
 * {
   margin: 0;
