--- a/styles/vn/_vn.scss
+++ b/styles/vn/_vn.scss
@@ -1,32 +1,66 @@
-@import './vn-info';
+@import './overview';
 @import './relations';
 @import './releases';
 
 .vn {
-  margin-top: 20px;
   width: 100%;
   height: 100%;
   position: relative;
   @include flexbox();
+  $nav-width: 15%;
+  $margin-right: 0%;
 
   .vn-nav {
     position: fixed;
-    width: 20%;
-    @include flexbox(flex-start, flex-start, column);
+    width: $nav-width;
+    height: 100%;
 
-    div {
-      &:nth-child(1) {
-        margin-top: 20px;
+    .contain {
+      @include flexbox(flex-start, flex-start, column);
+      margin-top: 50px;
+      margin-bottom: 50px;
+      height: 90%;
+      border-right: 1px solid rgba(0, 0, 0, 0.25);
+
+      div {
+        margin: 5px 0 5px 50px;
+        font-size: 1.2rem;
+        box-sizing: border-box;
+        padding-left: 5px;
+        border-left: 0px solid black;
+        transition: all 0.05s ease-in;
+
+        &:hover {
+          cursor: pointer;
+          border-left-width: 3px;
+        }
       }
-
-      margin: 5px 0 5px 10%;
-      font-size: 1.2rem;
     }
   }
 
   .vn-data {
     position: relative;
-    left: 20%;
-    width: 80%;
+    left: $nav-width + $margin-right;
+    width: 100% - $nav-width - $margin-right;
+    $left-width: 65%;
+    @include flexbox();
+
+    .data-left {
+      box-sizing: border-box;
+      width: $left-width;
+      padding-left: 10%;
+    }
+
+    .data-right {
+      width: 100% - $left-width;
+
+      .vn-image {
+        margin: 50px;
+
+        img {
+          box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.2), -1px -1px 10px 5px rgba(0, 0, 0, 0.2);
+        }
+      }
+    }
   }
 }
