--- a/styles/vn/_relations.scss
+++ b/styles/vn/_relations.scss
@@ -1,27 +1,64 @@
 .vn-relations {
   margin-bottom: 50px;
+  color: $textgrey;
 
   h2 {
-    font-size: 1.7rem;
+    font-size: 1.35rem;
     margin-bottom: 20px;
   }
 
   div {
     h3 {
-      font-size: 1.35rem;
-      text-decoration: underline;
+      font-size: 1.1rem;
     }
 
     ul {
+      width: 100%;
       margin: 10px 0;
       list-style-type: none;
+      @include flexbox(flex-start, center, row, wrap);
 
       li {
-        font-size: 1.1rem;
-        margin: 2px 0;
+        box-sizing: border-box;
+        background-color: $white;
+        margin: 10px 1%;
+        height: 40px;
+        border-radius: 5px;
+        transition: all 0.05s ease-out;
+
+        &:hover {
+          transform: scale(1.05);
+
+          a {
+            color: black;
+            &:after {
+              width: 100%;
+            }
+          }
+        }
 
         a {
+          position: relative;
+          padding: 10px;
+          box-sizing: border-box;
+          @include flexbox(flex-start, center, row);
+          width: 100%;
+          height: 100%;
+          color: $textgrey;
           text-decoration: none;
+          font-weight: 500;
+          font-size: 1.05rem;
+
+          &:after {
+            position: relative;
+            content: '';
+            width: 0%;
+            height: 1px;
+            background-color: black;
+            left: 50%;
+            transform: translateX(-50%);
+            transition: all 0.1s ease;
+          }
         }
       }
     }
